--- a/specs/runner.html
+++ b/specs/runner.html
@@ -18,8 +18,8 @@
     <script src="../lib/underscore-min.js"></script>
 
     <!-- Collection and spec -->
-    <script src="../src/knockout.LiveCollection.js"></script>
-    <script src="knockout.LiveCollection.spec.js"></script>
+    <script src="../src/knockout.collection.js"></script>
+    <script src="knockout.collection.spec.js"></script>
 
     <script type="text/javascript">
         var jasmineEnv = jasmine.getEnv();
