Add watching of iterators, unique, reorganization, and example changes
- watch() for iterators
- unique()
- aliases
- reorganize
- new example

--- a/specs/index.html
+++ b/specs/index.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
-
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Spec Runner</title>
+    <title>knockout.collection - Spec Runner</title>
 
-    <link rel="stylesheet" href="jasmine.css" type="text/css" media="screen" />
+    <link rel="stylesheet" href="content/jasmine.css" type="text/css" media="screen" />
 
-    <script src="../lib/jasmine.js"></script>
-    <script src="../lib/sinon-1.4.2.js"></script>
-    <script src="../lib/jasmine.html.js"></script>
-    <script src="../lib/jasmine.sinon.js"></script>
-    <script src="../lib/jasmine.async.js"></script>
+    <script src="content/jasmine.js"></script>
+    <script src="content/sinon-1.4.2.js"></script>
+    <script src="content/jasmine.html.js"></script>
+    <script src="content/jasmine.sinon.js"></script>
+    <script src="content/jasmine.async.js"></script>
 
     <!-- Dependencies -->
     <script src="../lib/knockout-2.2.1.js"></script>
