Add ko.wrap for watching functions for changes and caching for iterator methods
- Add ko.wrap
- Add caching for iterator methods
- Remove empty iterator evaluations with ko.wrap
- Add acceptance of options object for use of key and cache

--- a/specs/index.html
+++ b/specs/index.html
@@ -20,6 +20,9 @@
     <script src="../src/knockout.collection.js"></script>
     <script src="knockout.collection.spec.js"></script>
 
+    <script src="../src/knockout.wrap.js"></script>
+    <script src="knockout.wrap.spec.js"></script>
+
     <script type="text/javascript">
         var jasmineEnv = jasmine.getEnv();
         jasmineEnv.updateInterval = 1000;
