--- a/example/index.html
+++ b/example/index.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/bootstrap-responsive.min.css" />
     <link rel="stylesheet" href="css/app.css" />
-
-    <script src="cssrefresh.js"></script>
 </head>
 <body><div class="container-fluid">
 
@@ -92,11 +90,12 @@
 </div>
 
     <!-- Dependencies -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
     <script src="../lib/knockout-2.2.1.js"></script>
     <script src="../lib/underscore-min.js"></script>
 
     <!-- Collection and example -->
+    <script src="../src/knockout.wrap.js"></script>
     <script src="../src/knockout.collection.js"></script>
     <script>
         (function (global) {
