Update wrap to ko.wrapper with advanced function dependency watching
- ko.wrap -> ko.wrapper
- Dependencies are only evaluated when wrapped fn is called
- Add specs to check for this behavior

--- a/example/index.html
+++ b/example/index.html
@@ -95,7 +95,7 @@
     <script src="../lib/underscore-min.js"></script>
 
     <!-- Collection and example -->
-    <script src="../src/knockout.wrap.js"></script>
+    <script src="../src/knockout.wrapper.js"></script>
     <script src="../src/knockout.collection.js"></script>
     <script>
         (function (global) {
