--- a/specs/index.html
+++ b/specs/index.html
@@ -13,15 +13,15 @@
     <script src="content/jasmine.async.js"></script>
 
     <!-- Dependencies -->
-    <script src="../lib/knockout-2.2.1.js"></script>
+    <script src="../lib/knockout-2.2.1.debug.js"></script>
     <script src="../lib/underscore-min.js"></script>
 
     <!-- Collection and spec -->
     <script src="../src/knockout.collection.js"></script>
     <script src="knockout.collection.spec.js"></script>
 
-    <script src="../src/knockout.wrap.js"></script>
-    <script src="knockout.wrap.spec.js"></script>
+    <script src="../src/knockout.wrapper.js"></script>
+    <script src="knockout.wrapper.spec.js"></script>
 
     <script type="text/javascript">
         var jasmineEnv = jasmine.getEnv();
